[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/images/Portrait Launch Screens/ColorSpikeLogo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Buttons/SettingsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Buttons/PlayButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Buttons/AchievementsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Buttons/NoAdsButton.tscn" type="PackedScene" id=6]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 1900.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="Menu"]
margin_right = 800.0
margin_bottom = 186.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_top = 216.0
margin_right = 800.0
margin_bottom = 1800.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="Play" parent="Menu/VBoxContainer" instance=ExtResource( 4 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 342.0
margin_right = 800.0
margin_bottom = 492.0
stretch_mode = 0

[node name="SettingsButton" parent="Menu/VBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 592.0
margin_right = 800.0
margin_bottom = 742.0
stretch_mode = 0

[node name="AchievementsButton" parent="Menu/VBoxContainer" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 842.0
margin_right = 800.0
margin_bottom = 992.0
stretch_mode = 0

[node name="NoAdsButton" parent="Menu/VBoxContainer" instance=ExtResource( 6 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1092.0
margin_right = 800.0
margin_bottom = 1242.0
expand = false
stretch_mode = 0
[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/AchievementsButton" to="." method="_on_AchievementsButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/NoAdsButton" to="." method="_on_NoAdsButton_pressed"]
